Rebase to noble

--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -20,6 +20,6 @@ repo_vars:
   - CI='true'
   - CI_WEB='false'
   - CI_DELAY='120'
-  - CI_DOCKERENV='TZ=Europe/London|PIPER_VOICE=en_US-lessac-medium'
-  - CI_AUTH='user:password'
+  - CI_DOCKERENV='PIPER_VOICE=en_US-lessac-medium'
+  - CI_AUTH=''
   - CI_WEBPATH=''
