--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -10,7 +10,7 @@ project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_
 available_architectures:
   - {arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
   - {arch: "{{ arch_arm64 }}", tag: "arm64v8-latest"}
-development_versions: true
+development_versions: false
 development_versions_items:
   - {tag: "latest", desc: "Stable releases"}
   - {tag: "gpu", desc: "Releases with Nvidia GPU support (amd64 only)"}
@@ -84,6 +84,6 @@ init_diagram: |
   "piper:latest" <- Base Images
 # changelog
 changelogs:
-  - {date: "26.11.24:", desc: "Add GPU branch."}
+  #- {date: "26.11.24:", desc: "Add GPU branch."}
   - {date: "18.07.24:", desc: "Rebase to Ubuntu Noble."}
   - {date: "25.11.23:", desc: "Initial Release."}
