--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -30,6 +30,7 @@ param_ports:
 # optional container parameters
 opt_param_usage_include_env: true
 opt_param_env_vars:
+  - {env_var: "LOCAL_ONLY", env_value: "", desc: "If set to `true`, or any other value, the container will not attempt to download models from HuggingFace and will only use locally-provided models."}
   - {env_var: "PIPER_LENGTH", env_value: "1.0", desc: "Voice speaking rate, 1.0 is default with < 1.0 being faster and > 1.0 being slower."}
   - {env_var: "PIPER_NOISE", env_value: "0.667", desc: "Controls the variability of the voice by adding noise. Values above 1 will start to degrade audio."}
   - {env_var: "PIPER_NOISEW", env_value: "0.333", desc: "Controls the variability of speaking cadence. Values above 1 produce extreme stutters and pauses."}
@@ -86,6 +87,7 @@ init_diagram: |
   "piper:latest" <- Base Images
 # changelog
 changelogs:
+  - {date: "29.08.25:", desc: "Add support for local only mode."}
   - {date: "10.08.25:", desc: "Add streaming support."}
   - {date: "18.07.24:", desc: "Rebase to Ubuntu Noble."}
   - {date: "25.11.23:", desc: "Initial Release."}
