--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -24,17 +24,12 @@ RUN \
     pip \
     wheel && \
   pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/ubuntu/ \
+    piper-tts \
     "wyoming-piper==${PIPER_VERSION}" && \
   if [ -z ${PIPER_BIN_VERSION+x} ]; then \
-    PIPER_BIN_VERSION=$(curl -sL "https://api.github.com/repos/rhasspy/piper/releases/latest" \
+    PIPER_BIN_VERSION=$(curl -sL "https://api.github.com/repos/OHF-Voice/piper1-gpl/releases/latest" \
     | awk '/tag_name/{print $4;exit}' FS='[""]'); \
   fi && \
-  curl -sL -o  \
-    /tmp/piper.tar.gz -L \
-    "https://github.com/rhasspy/piper/releases/download/${PIPER_BIN_VERSION}/piper_linux_aarch64.tar.gz" && \
-  tar xzf \
-    /tmp/piper.tar.gz -C \
-    /usr/share && \
   printf "Linuxserver.io version: ${VERSION}\nBuild-date: ${BUILD_DATE}" > /build_version && \
   echo "**** cleanup ****" && \
   rm -rf \
