--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -2,12 +2,14 @@
 
 # jenkins variables
 project_name: docker-piper
-external_type: pip_version
+external_type: github_commit
 release_type: prerelease
 release_tag: gpu
 ls_branch: gpu
 repo_vars:
-  - EXT_PIP = 'wyoming-piper'
+  - EXT_GIT_BRANCH = 'master'
+  - EXT_USER = 'rhasspy'
+  - EXT_REPO = 'wyoming-piper'
   - BUILD_VERSION_ARG = 'PIPER_VERSION'
   - LS_USER = 'linuxserver'
   - LS_REPO = 'docker-piper'
