--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -2,7 +2,7 @@
 
 # project information
 project_name: piper
-project_url: "https://github.com/rhasspy/piper/"
+project_url: "https://github.com/rhasspy/wyoming-piper"
 project_logo: "https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/piper-logo.png"
 project_blurb: "[{{ project_name|capitalize }}]({{ project_url }}) is a fast, local neural text to speech system that sounds great and is optimized for the Raspberry Pi 4. This container provides a Wyoming protocol server for Piper."
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
@@ -33,7 +33,7 @@ opt_param_env_vars:
   - {env_var: "PIPER_NOISE", env_value: "0.667", desc: "Controls the variability of the voice by adding noise. Values above 1 will start to degrade audio."}
   - {env_var: "PIPER_NOISEW", env_value: "0.333", desc: "Controls the variability of speaking cadence. Values above 1 produce extreme stutters and pauses."}
   - {env_var: "PIPER_SPEAKER", env_value: "0", desc: "Speaker number to use if the voice supports multiple speakers."}
-  - {env_var: "STREAMING", env_value: "", desc: "Setting to `true`, or any other value, will enable support for streaming audio on sentence boundaries."}
+  - {env_var: "NO_STREAMING", env_value: "", desc: "Setting to `true`, or any other value, will disable support for streaming audio on sentence boundaries."}
 readonly_supported: true
 # application setup block
 app_setup_block_enabled: true
@@ -42,7 +42,7 @@ app_setup_block: |
 
   When using the `gpu` tag with Nvidia GPUs, make sure you set the container to use the `nvidia` runtime and that you have the [Nvidia Container Toolkit](https://github.com/NVIDIA/nvidia-container-toolkit) installed on the host and that you run the container with the correct GPU(s) exposed. See the [Nvidia Container Toolkit docs](https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/latest/sample-workload.html) for more details.
 
-  For more information see the [piper docs](https://github.com/rhasspy/piper/),
+  For more information see the [wyoming piper docs](https://github.com/rhasspy/wyoming-piper),
 # init diagram
 init_diagram: |
   "piper:gpu": {
@@ -86,7 +86,7 @@ init_diagram: |
   "piper:gpu" <- Base Images
 # changelog
 changelogs:
-  - {date: "29.08.25:", desc: "Add streaming support & support for local only mode."}
+  - {date: "15.11.25:", desc: "Add streaming support & support for local only mode."}
   - {date: "26.11.24:", desc: "Add GPU branch."}
   - {date: "18.07.24:", desc: "Rebase to Ubuntu Noble."}
   - {date: "25.11.23:", desc: "Initial Release."}
